--- a/readme
+++ b/readme
@@ -1,98 +1,1 @@
-<div id="static-form-container">
-  <fw-form id="fw-static-form">
-    <fw-form-control
-      type="TEXT"
-      name="first_name"
-      placeholder="First Name"
-      required
-      label="First Name"
-      id="first_name"
-    ></fw-form-control>
-
-    <fw-form-control
-      type="TEXT"
-      name="last_name"
-      placeholder="Last Name"
-      required
-      label="Last Name"
-      id="last_name"
-    ></fw-form-control>
-
-    <fw-form-control
-    type="TEXT"
-    name="comnpanies"
-    placeholder="comnpanies"
-    required
-    label="comnpanies
-    id="comnpanies"
-  ></fw-form-control>
-
-  <fw-form-control
-  type="TEXT"
-  name="address"
-  placeholder="address"
-  required
-  label="address"
-  id="address"
-></fw-form-control>
-
-<fw-form-control
-type="TEXT"
-name="city"
-placeholder="city"
-required
-label="city"
-id="city"
-></fw-form-control>
-
-<fw-form-control
-type="TEXT"
-name="state"
-placeholder="state"
-required
-label="state"
-id="state"
-></fw-form-control>
-
-
-    </fw-form-control>
-  </fw-form>
-  <fw-button id="submit-static-form">Submit</fw-button>
-
-</div>
-<script type="application/javascript">
-  var formStatic = document.querySelector('#fw-static-form');
-  document
-    .querySelector('#submit-static-form')
-    .addEventListener('click', async (e) => {
-      const { values, isValid } = await formStatic.doSubmit(e);
-      console.log({ values, isValid });
-
-      if (isValid) {
-        // make ajax post end point with values
-        // fetch("/post",values);
-
-        // if error from backend , set Errors - passing key value pair
-        formStatic.setFieldErrors({
-          first_name: 'First Name must be unique <<Server Error>>',
-        });
-
-        // reset the form if required if success
-        // formRef.current.doReset(e);
-      }
-    });
-
-
-  var initialValues = {
-    first_name: 'John',
-   
-  };
-  formStatic.initialValues = initialValues;
-
-  function handleCustomInput(e) {
-    console.log('handle input');
-    formStatic.setFieldValue([e.target.name], e.target.value);
-  }
-
-
-</script>
+java appplication which gets the domain information 
